--- a/src/output.css
+++ b/src/output.css
@@ -545,12 +545,66 @@ video {
   display: none;
 }
 
-.absolute {
-  position: absolute;
+.relative {
+  position: relative;
+}
+
+.top-\[5px\] {
+  top: 5px;
+}
+
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mb-32 {
+  margin-bottom: 8rem;
 }
 
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
+.h-40 {
+  height: 10rem;
+}
+
+.h-64 {
+  height: 16rem;
+}
+
+.h-\[15px\] {
+  height: 15px;
+}
+
+.h-\[50px\] {
+  height: 50px;
 }
 
 .h-full {
@@ -561,20 +615,177 @@ video {
   height: 100vh;
 }
 
-.w-screen {
-  width: 100vw;
+.h-48 {
+  height: 12rem;
+}
+
+.h-\[20px\] {
+  height: 20px;
+}
+
+.h-\[10px\] {
+  height: 10px;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-\[15px\] {
+  width: 15px;
 }
 
 .w-\[25\%\] {
   width: 25%;
 }
 
+.w-\[50px\] {
+  width: 50px;
+}
+
+.w-\[75\%\] {
+  width: 75%;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-screen {
+  width: 100vw;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
+}
+
+.w-fit {
+  width: fit-content;
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
+.w-\[20px\] {
+  width: 20px;
+}
+
+.w-\[10px\] {
+  width: 10px;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .flex-row {
   flex-direction: row;
 }
 
-.bg-\[\#1212200\] {
-  background-color: #1212200;
+.flex-col {
+  flex-direction: column;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-2 {
+  border-width: 2px;
+}
+
+.border-t-2 {
+  border-top-width: 2px;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-\[\#59c39c\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(89 195 156 / var(--tw-border-opacity));
+}
+
+.border-\[\#fdd70b\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(253 215 11 / var(--tw-border-opacity));
+}
+
+.border-\[\#36b8f5\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(54 184 245 / var(--tw-border-opacity));
+}
+
+.border-\[\#d7d8da\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(215 216 218 / var(--tw-border-opacity));
+}
+
+.border-t-\[\#59c39c\] {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(89 195 156 / var(--tw-border-opacity));
+}
+
+.border-t-\[\#fdd70b\] {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(253 215 11 / var(--tw-border-opacity));
+}
+
+.border-t-\[\#36b8f5\] {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(54 184 245 / var(--tw-border-opacity));
+}
+
+.border-b-\[\#d7d8da\] {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(215 216 218 / var(--tw-border-opacity));
 }
 
 .bg-\[\#121220\] {
@@ -582,9 +793,9 @@ video {
   background-color: rgb(18 18 32 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-300 {
+.bg-\[\#a6dbcb\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
+  background-color: rgb(166 219 203 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#edf1f5\] {
@@ -592,12 +803,67 @@ video {
   background-color: rgb(237 241 245 / var(--tw-bg-opacity));
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.bg-\[\#f2e9ac\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 233 172 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#a7dcf5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(167 220 245 / var(--tw-bg-opacity));
+}
+
+.p-12 {
+  padding: 3rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
