--- a/src/output.css
+++ b/src/output.css
@@ -553,16 +553,16 @@ video {
   position: relative;
 }
 
-.top-\[5px\] {
-  top: 5px;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
 
 .top-0 {
   top: 0px;
+}
+
+.top-\[5px\] {
+  top: 5px;
 }
 
 .mx-6 {
@@ -585,24 +585,12 @@ video {
   margin-bottom: 1rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mt-32 {
-  margin-top: 8rem;
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .mb-32 {
   margin-bottom: 8rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
 }
 
 .ml-4 {
@@ -617,8 +605,20 @@ video {
   margin-top: 0.25rem;
 }
 
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mt-3 {
   margin-top: 0.75rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
 }
 
 .flex {
@@ -637,36 +637,12 @@ video {
   height: 10rem;
 }
 
-.h-64 {
-  height: 16rem;
-}
-
-.h-\[15px\] {
-  height: 15px;
-}
-
-.h-\[50px\] {
-  height: 50px;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
 .h-48 {
   height: 12rem;
 }
 
-.h-\[20px\] {
-  height: 20px;
-}
-
-.h-\[10px\] {
-  height: 10px;
+.h-64 {
+  height: 16rem;
 }
 
 .h-7 {
@@ -677,56 +653,28 @@ video {
   height: 2rem;
 }
 
+.h-\[10px\] {
+  height: 10px;
+}
+
+.h-\[15px\] {
+  height: 15px;
+}
+
 .h-\[1px\] {
   height: 1px;
 }
 
-.w-1\/2 {
-  width: 50%;
+.h-\[50px\] {
+  height: 50px;
 }
 
-.w-\[15px\] {
-  width: 15px;
-}
-
-.w-\[25\%\] {
-  width: 25%;
-}
-
-.w-\[50px\] {
-  width: 50px;
-}
-
-.w-\[75\%\] {
-  width: 75%;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-screen {
-  width: 100vw;
+.h-full {
+  height: 100%;
 }
 
 .w-2\/3 {
   width: 66.666667%;
-}
-
-.w-fit {
-  width: fit-content;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-\[20px\] {
-  width: 20px;
-}
-
-.w-\[10px\] {
-  width: 10px;
 }
 
 .w-7 {
@@ -737,20 +685,60 @@ video {
   width: 2rem;
 }
 
+.w-\[10px\] {
+  width: 10px;
+}
+
+.w-\[15px\] {
+  width: 15px;
+}
+
 .w-\[300px\] {
   width: 300px;
+}
+
+.w-\[50px\] {
+  width: 50px;
+}
+
+.w-fit {
+  width: fit-content;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-screen {
+  width: 100vw;
+}
+
+.w-\[20\%\] {
+  width: 20%;
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-1\/5 {
+  width: 20%;
 }
 
 .cursor-pointer {
   cursor: pointer;
 }
 
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -765,10 +753,6 @@ video {
   align-items: center;
 }
 
-.justify-start {
-  justify-content: flex-start;
-}
-
 .justify-between {
   justify-content: space-between;
 }
@@ -777,20 +761,20 @@ video {
   justify-content: space-around;
 }
 
-.gap-4 {
-  gap: 1rem;
+.gap-1 {
+  gap: 0.25rem;
 }
 
 .gap-2 {
   gap: 0.5rem;
 }
 
-.gap-8 {
-  gap: 2rem;
+.gap-4 {
+  gap: 1rem;
 }
 
-.gap-1 {
-  gap: 0.25rem;
+.gap-8 {
+  gap: 2rem;
 }
 
 .overflow-y-auto {
@@ -813,12 +797,26 @@ video {
   border-width: 2px;
 }
 
-.border-t-2 {
-  border-top-width: 2px;
+.border-4 {
+  border-width: 4px;
 }
 
 .border-b-2 {
   border-bottom-width: 2px;
+}
+
+.border-t-2 {
+  border-top-width: 2px;
+}
+
+.border-\[\#d7d8da\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(215 216 218 / var(--tw-border-opacity));
+}
+
+.border-blue-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(29 78 216 / var(--tw-border-opacity));
 }
 
 .border-black {
@@ -841,9 +839,9 @@ video {
   border-color: rgb(54 184 245 / var(--tw-border-opacity));
 }
 
-.border-\[\#d7d8da\] {
+.border-b-\[\#d7d8da\] {
   --tw-border-opacity: 1;
-  border-color: rgb(215 216 218 / var(--tw-border-opacity));
+  border-bottom-color: rgb(215 216 218 / var(--tw-border-opacity));
 }
 
 .border-t-\[\#59c39c\] {
@@ -861,36 +859,6 @@ video {
   border-top-color: rgb(54 184 245 / var(--tw-border-opacity));
 }
 
-.border-b-\[\#d7d8da\] {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(215 216 218 / var(--tw-border-opacity));
-}
-
-.bg-\[\#121220\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(18 18 32 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#a6dbcb\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(166 219 203 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#edf1f5\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(237 241 245 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#f2e9ac\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 233 172 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#a7dcf5\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(167 220 245 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#283342\] {
   --tw-bg-opacity: 1;
   background-color: rgb(40 51 66 / var(--tw-bg-opacity));
@@ -901,9 +869,29 @@ video {
   background-color: rgb(55 147 154 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#edf1f5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(237 241 245 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#a6dbcb\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(166 219 203 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f2e9ac\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 233 172 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#a7dcf5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(167 220 245 / var(--tw-bg-opacity));
 }
 
 .p-12 {
@@ -932,10 +920,6 @@ video {
   padding-right: 2rem;
 }
 
-.pt-8 {
-  padding-top: 2rem;
-}
-
 .pl-4 {
   padding-left: 1rem;
 }
@@ -944,12 +928,21 @@ video {
   padding-top: 1rem;
 }
 
+.pt-8 {
+  padding-top: 2rem;
+}
+
 .text-left {
   text-align: left;
 }
 
 .text-center {
   text-align: center;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl {
@@ -962,21 +955,6 @@ video {
   line-height: 2.5rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .text-\[15px\] {
   font-size: 15px;
 }
@@ -987,6 +965,16 @@ video {
 
 .text-\[20px\] {
   font-size: 20px;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -1015,6 +1003,14 @@ video {
 .text-yellow-300 {
   --tw-text-opacity: 1;
   color: rgb(253 224 71 / var(--tw-text-opacity));
+}
+
+.opacity-0 {
+  opacity: 0;
+}
+
+.opacity-50 {
+  opacity: 0.5;
 }
 
 .duration-300 {
