--- a/src/output.css
+++ b/src/output.css
@@ -557,12 +557,20 @@ video {
   bottom: 0px;
 }
 
-.top-0 {
-  top: 0px;
+.right-0 {
+  right: 0px;
+}
+
+.top-16 {
+  top: 4rem;
 }
 
 .top-\[5px\] {
   top: 5px;
+}
+
+.left-0 {
+  left: 0px;
 }
 
 .mx-6 {
@@ -605,6 +613,10 @@ video {
   margin-top: 0.25rem;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .mt-12 {
   margin-top: 3rem;
 }
@@ -621,6 +633,30 @@ video {
   margin-top: 8rem;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.ml-3 {
+  margin-left: 0.75rem;
+}
+
+.ml-5 {
+  margin-left: 1.25rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
+}
+
+.ml-10 {
+  margin-left: 2.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .flex {
   display: flex;
 }
@@ -629,8 +665,20 @@ video {
   display: grid;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .h-12 {
   height: 3rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.h-2 {
+  height: 0.5rem;
 }
 
 .h-40 {
@@ -673,8 +721,40 @@ video {
   height: 100%;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-1\/5 {
+  width: 20%;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
 .w-2\/3 {
   width: 66.666667%;
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
+.w-60 {
+  width: 15rem;
 }
 
 .w-7 {
@@ -693,10 +773,6 @@ video {
   width: 15px;
 }
 
-.w-\[300px\] {
-  width: 300px;
-}
-
 .w-\[50px\] {
   width: 50px;
 }
@@ -713,20 +789,20 @@ video {
   width: 100vw;
 }
 
-.w-\[20\%\] {
-  width: 20%;
+.w-5 {
+  width: 1.25rem;
 }
 
-.w-4\/5 {
-  width: 80%;
+.w-20 {
+  width: 5rem;
 }
 
-.w-1\/4 {
-  width: 25%;
+.w-40 {
+  width: 10rem;
 }
 
-.w-1\/5 {
-  width: 20%;
+.w-80 {
+  width: 20rem;
 }
 
 .cursor-pointer {
@@ -769,6 +845,10 @@ video {
   gap: 0.5rem;
 }
 
+.gap-3 {
+  gap: 0.75rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
@@ -779,6 +859,10 @@ video {
 
 .overflow-y-auto {
   overflow-y: auto;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-lg {
@@ -797,10 +881,6 @@ video {
   border-width: 2px;
 }
 
-.border-4 {
-  border-width: 4px;
-}
-
 .border-b-2 {
   border-bottom-width: 2px;
 }
@@ -814,49 +894,14 @@ video {
   border-color: rgb(215 216 218 / var(--tw-border-opacity));
 }
 
-.border-blue-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(29 78 216 / var(--tw-border-opacity));
-}
-
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.border-\[\#59c39c\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(89 195 156 / var(--tw-border-opacity));
-}
-
-.border-\[\#fdd70b\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(253 215 11 / var(--tw-border-opacity));
-}
-
-.border-\[\#36b8f5\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(54 184 245 / var(--tw-border-opacity));
-}
-
 .border-b-\[\#d7d8da\] {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(215 216 218 / var(--tw-border-opacity));
-}
-
-.border-t-\[\#59c39c\] {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(89 195 156 / var(--tw-border-opacity));
-}
-
-.border-t-\[\#fdd70b\] {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(253 215 11 / var(--tw-border-opacity));
-}
-
-.border-t-\[\#36b8f5\] {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(54 184 245 / var(--tw-border-opacity));
 }
 
 .bg-\[\#283342\] {
@@ -869,6 +914,21 @@ video {
   background-color: rgb(55 147 154 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#E3EBF3\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(227 235 243 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#F7FAFD\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 250 253 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#e3ebf3\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(227 235 243 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#edf1f5\] {
   --tw-bg-opacity: 1;
   background-color: rgb(237 241 245 / var(--tw-bg-opacity));
@@ -879,19 +939,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#a6dbcb\] {
+.bg-\[\#FFFFFF\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(166 219 203 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#f2e9ac\] {
+.bg-\[rgb\(255\2c 19\2c 19\)\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(242 233 172 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#a7dcf5\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(167 220 245 / var(--tw-bg-opacity));
+  background-color: rgb(255 19 19 / var(--tw-bg-opacity));
 }
 
 .p-12 {
@@ -906,8 +961,25 @@ video {
   padding: 0.625rem;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .p-5 {
   padding: 1.25rem;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-4 {
@@ -918,6 +990,11 @@ video {
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .pl-4 {
@@ -955,6 +1032,10 @@ video {
   line-height: 2.5rem;
 }
 
+.text-\[12px\] {
+  font-size: 12px;
+}
+
 .text-\[15px\] {
   font-size: 15px;
 }
@@ -977,12 +1058,29 @@ video {
   line-height: 1.75rem;
 }
 
+.text-\[24px\] {
+  font-size: 24px;
+}
+
+.text-\[32px\] {
+  font-size: 32px;
+}
+
+.text-\[30px\] {
+  font-size: 30px;
+}
+
 .font-bold {
   font-weight: 700;
 }
 
 .font-semibold {
   font-weight: 600;
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-gray-100 {
@@ -1005,12 +1103,14 @@ video {
   color: rgb(253 224 71 / var(--tw-text-opacity));
 }
 
-.opacity-0 {
-  opacity: 0;
+.text-\[\#37939A\] {
+  --tw-text-opacity: 1;
+  color: rgb(55 147 154 / var(--tw-text-opacity));
 }
 
-.opacity-50 {
-  opacity: 0.5;
+.text-\[\#000000\] {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .duration-300 {
@@ -1020,6 +1120,11 @@ video {
 .hover\:bg-blue-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 @media (min-width: 1024px) {
