--- a/src/output.css
+++ b/src/output.css
@@ -601,6 +601,14 @@ video {
   margin-left: 2.5rem;
 }
 
+.ml-12 {
+  margin-left: 3rem;
+}
+
+.ml-3 {
+  margin-left: 0.75rem;
+}
+
 .ml-4 {
   margin-left: 1rem;
 }
@@ -838,9 +846,24 @@ video {
   border-top-width: 2px;
 }
 
+.border-\[\#36b8f5\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(54 184 245 / var(--tw-border-opacity));
+}
+
+.border-\[\#59c39c\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(89 195 156 / var(--tw-border-opacity));
+}
+
 .border-\[\#d7d8da\] {
   --tw-border-opacity: 1;
   border-color: rgb(215 216 218 / var(--tw-border-opacity));
+}
+
+.border-\[\#fdd70b\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(253 215 11 / var(--tw-border-opacity));
 }
 
 .border-black {
@@ -851,6 +874,21 @@ video {
 .border-b-\[\#d7d8da\] {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(215 216 218 / var(--tw-border-opacity));
+}
+
+.border-t-\[\#36b8f5\] {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(54 184 245 / var(--tw-border-opacity));
+}
+
+.border-t-\[\#59c39c\] {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(89 195 156 / var(--tw-border-opacity));
+}
+
+.border-t-\[\#fdd70b\] {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(253 215 11 / var(--tw-border-opacity));
 }
 
 .bg-\[\#283342\] {
@@ -878,6 +916,16 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#a6dbcb\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(166 219 203 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#a7dcf5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(167 220 245 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#e3ebf3\] {
   --tw-bg-opacity: 1;
   background-color: rgb(227 235 243 / var(--tw-bg-opacity));
@@ -886,6 +934,11 @@ video {
 .bg-\[\#edf1f5\] {
   --tw-bg-opacity: 1;
   background-color: rgb(237 241 245 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f2e9ac\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 233 172 / var(--tw-bg-opacity));
 }
 
 .bg-white {
