--- a/src/output.css
+++ b/src/output.css
@@ -545,6 +545,10 @@ video {
   display: none;
 }
 
+.static {
+  position: static;
+}
+
 .fixed {
   position: fixed;
 }
@@ -567,14 +571,6 @@ video {
 
 .top-\[5px\] {
   top: 5px;
-}
-
-.m-12 {
-  margin: 3rem;
-}
-
-.m-4 {
-  margin: 1rem;
 }
 
 .mx-6 {
@@ -605,16 +601,16 @@ video {
   margin-bottom: 8rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .ml-10 {
   margin-left: 2.5rem;
 }
 
 .ml-12 {
   margin-left: 3rem;
-}
-
-.ml-28 {
-  margin-left: 7rem;
 }
 
 .ml-3 {
@@ -635,6 +631,10 @@ video {
 
 .mt-1 {
   margin-top: 0.25rem;
+}
+
+.mt-1\.5 {
+  margin-top: 0.375rem;
 }
 
 .mt-10 {
@@ -669,46 +669,6 @@ video {
   margin-top: 1.5rem;
 }
 
-.ml-5 {
-  margin-left: 1.25rem;
-}
-
-.ml-20 {
-  margin-left: 5rem;
-}
-
-.ml-48 {
-  margin-left: 12rem;
-}
-
-.-ml-96 {
-  margin-left: -24rem;
-}
-
-.ml-64 {
-  margin-left: 16rem;
-}
-
-.ml-14 {
-  margin-left: 3.5rem;
-}
-
-.ml-24 {
-  margin-left: 6rem;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
-.mt-1\.5 {
-  margin-top: 0.375rem;
-}
-
-.mt-6 {
-  margin-top: 1.5rem;
-}
-
 .flex {
   display: flex;
 }
@@ -732,6 +692,10 @@ video {
 
 .h-2 {
   height: 0.5rem;
+}
+
+.h-32 {
+  height: 8rem;
 }
 
 .h-40 {
@@ -778,8 +742,8 @@ video {
   height: 100%;
 }
 
-.h-32 {
-  height: 8rem;
+.w-1\/4 {
+  width: 25%;
 }
 
 .w-1\/5 {
@@ -842,18 +806,6 @@ video {
   width: 100vw;
 }
 
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-16 {
-  width: 4rem;
-}
-
 .cursor-pointer {
   cursor: pointer;
 }
@@ -878,10 +830,6 @@ video {
   flex-direction: column;
 }
 
-.items-end {
-  align-items: flex-end;
-}
-
 .items-center {
   align-items: center;
 }
@@ -892,10 +840,6 @@ video {
 
 .justify-around {
   justify-content: space-around;
-}
-
-.justify-items-center {
-  justify-items: center;
 }
 
 .gap-1 {
@@ -916,14 +860,6 @@ video {
 
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-20 {
-  gap: 5rem;
-}
-
-.gap-24 {
-  gap: 6rem;
 }
 
 .overflow-y-auto {
@@ -1063,6 +999,11 @@ video {
   background-color: rgb(237 241 245 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#f0483e\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 72 62 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#f2e9ac\] {
   --tw-bg-opacity: 1;
   background-color: rgb(242 233 172 / var(--tw-bg-opacity));
@@ -1071,11 +1012,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#f0483e\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 72 62 / var(--tw-bg-opacity));
 }
 
 .p-12 {
@@ -1102,10 +1038,6 @@ video {
   padding: 1.25rem;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1116,24 +1048,24 @@ video {
   padding-right: 1rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .pl-4 {
@@ -1244,14 +1176,14 @@ video {
   transition-duration: 300ms;
 }
 
-.hover\:bg-blue-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-\[\#ed6059\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(237 96 89 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
 .focus\:outline-none:focus {
