--- a/src/output.css
+++ b/src/output.css
@@ -806,6 +806,10 @@ video {
   width: 100vw;
 }
 
+.w-40 {
+  width: 10rem;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -954,7 +958,7 @@ video {
   background-color: rgb(40 51 66 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#37939a\] {
+.bg-\[\#37939A\] {
   --tw-bg-opacity: 1;
   background-color: rgb(55 147 154 / var(--tw-bg-opacity));
 }
@@ -1012,6 +1016,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#37939a\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 147 154 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#19557f\] {
