--- a/src/output.css
+++ b/src/output.css
@@ -886,6 +886,16 @@ video {
   border-top-width: 2px;
 }
 
+.border-\[\#36b8f5\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(54 184 245 / var(--tw-border-opacity));
+}
+
+.border-\[\#59c39c\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(89 195 156 / var(--tw-border-opacity));
+}
+
 .border-\[\#9ba2ab\] {
   --tw-border-opacity: 1;
   border-color: rgb(155 162 171 / var(--tw-border-opacity));
@@ -894,6 +904,11 @@ video {
 .border-\[\#d7d8da\] {
   --tw-border-opacity: 1;
   border-color: rgb(215 216 218 / var(--tw-border-opacity));
+}
+
+.border-\[\#fdd70b\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(253 215 11 / var(--tw-border-opacity));
 }
 
 .border-black {
@@ -906,34 +921,19 @@ video {
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
-.border-\[\#59c39c\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(89 195 156 / var(--tw-border-opacity));
-}
-
-.border-\[\#36b8f5\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(54 184 245 / var(--tw-border-opacity));
-}
-
-.border-\[\#fdd70b\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(253 215 11 / var(--tw-border-opacity));
-}
-
 .border-b-\[\#d7d8da\] {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(215 216 218 / var(--tw-border-opacity));
 }
 
-.border-t-\[\#59c39c\] {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(89 195 156 / var(--tw-border-opacity));
-}
-
 .border-t-\[\#36b8f5\] {
   --tw-border-opacity: 1;
   border-top-color: rgb(54 184 245 / var(--tw-border-opacity));
+}
+
+.border-t-\[\#59c39c\] {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(89 195 156 / var(--tw-border-opacity));
 }
 
 .border-t-\[\#fdd70b\] {
@@ -976,6 +976,16 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#a6dbcb\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(166 219 203 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#a7dcf5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(167 220 245 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#e3ebf3\] {
   --tw-bg-opacity: 1;
   background-color: rgb(227 235 243 / var(--tw-bg-opacity));
@@ -991,24 +1001,14 @@ video {
   background-color: rgb(240 72 62 / var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#a6dbcb\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(166 219 203 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#a7dcf5\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(167 220 245 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#f2e9ac\] {
   --tw-bg-opacity: 1;
   background-color: rgb(242 233 172 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .p-12 {
@@ -1171,6 +1171,10 @@ video {
 
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
 }
 
 .hover\:bg-\[\#ed6059\]:hover {
