--- a/src/output.css
+++ b/src/output.css
@@ -573,6 +573,11 @@ video {
   top: 5px;
 }
 
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
 .mx-6 {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
@@ -732,6 +737,10 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-1\/4 {
@@ -961,11 +970,6 @@ video {
   background-color: rgb(227 235 243 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#F0483E\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 72 62 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#F7FAFD\] {
   --tw-bg-opacity: 1;
   background-color: rgb(247 250 253 / var(--tw-bg-opacity));
@@ -1004,6 +1008,21 @@ video {
 .bg-\[\#f2e9ac\] {
   --tw-bg-opacity: 1;
   background-color: rgb(242 233 172 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-white {
