--- a/src/output.css
+++ b/src/output.css
@@ -573,11 +573,6 @@ video {
   top: 5px;
 }
 
-.mx-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
-}
-
 .mx-6 {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
@@ -596,6 +591,11 @@ video {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
 }
 
 .mb-2 {
@@ -739,10 +739,6 @@ video {
   height: 100%;
 }
 
-.w-1\/2 {
-  width: 50%;
-}
-
 .w-1\/4 {
   width: 25%;
 }
@@ -805,6 +801,10 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-1\/2 {
+  width: 50%;
 }
 
 .cursor-pointer {
@@ -970,6 +970,11 @@ video {
   background-color: rgb(227 235 243 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#F0483E\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 72 62 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#F7FAFD\] {
   --tw-bg-opacity: 1;
   background-color: rgb(247 250 253 / var(--tw-bg-opacity));
@@ -1010,6 +1015,11 @@ video {
   background-color: rgb(242 233 172 / var(--tw-bg-opacity));
 }
 
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
@@ -1023,11 +1033,6 @@ video {
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .p-12 {
