--- a/src/output.css
+++ b/src/output.css
@@ -573,6 +573,11 @@ video {
   top: 5px;
 }
 
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
 .mx-6 {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
@@ -591,11 +596,6 @@ video {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
-}
-
-.mx-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
 }
 
 .mb-2 {
@@ -739,6 +739,10 @@ video {
   height: 100%;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
 .w-1\/4 {
   width: 25%;
 }
@@ -779,6 +783,10 @@ video {
   width: 10px;
 }
 
+.w-\[12\.5\%\] {
+  width: 12.5%;
+}
+
 .w-\[15px\] {
   width: 15px;
 }
@@ -803,8 +811,8 @@ video {
   width: 100vw;
 }
 
-.w-1\/2 {
-  width: 50%;
+.w-\[15\%\] {
+  width: 15%;
 }
 
 .cursor-pointer {
@@ -895,6 +903,10 @@ video {
   border-top-width: 2px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-\[\#36b8f5\] {
   --tw-border-opacity: 1;
   border-color: rgb(54 184 245 / var(--tw-border-opacity));
@@ -950,6 +962,11 @@ video {
   border-top-color: rgb(253 215 11 / var(--tw-border-opacity));
 }
 
+.border-b-black {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
 .bg-\[\#19557f\] {
   --tw-bg-opacity: 1;
   background-color: rgb(25 85 127 / var(--tw-bg-opacity));
@@ -968,11 +985,6 @@ video {
 .bg-\[\#E3EBF3\] {
   --tw-bg-opacity: 1;
   background-color: rgb(227 235 243 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#F0483E\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 72 62 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#F7FAFD\] {
@@ -1015,11 +1027,6 @@ video {
   background-color: rgb(242 233 172 / var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
@@ -1033,6 +1040,11 @@ video {
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .p-12 {
